update CSS link in HTML file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="C:/Users/Kathryn/Workspace/reactive-club/resources/styles.css" type="text/css">
+        <link rel="stylesheet" href="/resources/styles.css" type="text/css">
         <title>Oakworth Village Club</title>
     </head>
 
