--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/resources/styles.css" type="text/css">
+        <link rel="stylesheet" href="resources/styles.css" type="text/css">
+
         <title>Oakworth Village Club</title>
     </head>
 
@@ -34,9 +35,9 @@
 
         <div class="img-container">
             <div id="img-one">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\coffee.jpg" alt="Come for a coffee!">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\dancing.jpg" alt="Dance classes">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\playground.jpg" alt="Play park">
+                <img src="resources/images/coffee.jpg" alt="Come for a coffee!">
+                <img src="resources/images/dancing.jpg" alt="Dance classes">
+                <img src="resources/images/playground.jpg" alt="Play park">
             </div>
         </div>
 
@@ -47,9 +48,9 @@
 
         <div class="img-container">
             <div id="img-two">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\cricket.jpg" alt="Watch a game of cricket!">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\farmer.jpg" alt="Come to the farmers market">
-                <img src="C:\Users\Kathryn\Workspace\reactive-club\resources\images\walk.jpg" alt="Explore our local nature">
+                <img src="resources/images/cricket.jpg" alt="Watch a game of cricket!">
+                <img src="resources/images/farmer.jpg" alt="Come to the farmers market">
+                <img src="resources/images/walk.jpg" alt="Explore our local nature">
             </div>
         </div>
 
