--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="img-container">
-            <div id="img-one">
+            <div class="image">
                 <img src="resources/images/coffee.jpg" alt="Come for a coffee!">
                 <img src="resources/images/dancing.jpg" alt="Dance classes">
                 <img src="resources/images/playground.jpg" alt="Play park">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="img-container">
-            <div id="img-two">
+            <div class="image">
                 <img src="resources/images/cricket.jpg" alt="Watch a game of cricket!">
                 <img src="resources/images/farmer.jpg" alt="Come to the farmers market">
                 <img src="resources/images/walk.jpg" alt="Explore our local nature">
