--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         <div id="wel-container">
             <h2>Everybody is welcome</h2>
-                <p>Meet new and old friends</p>
-                <p>Have tea and cakes or go for a walk in the local area</p>
-                <p>Or entertain your young ones with our brand new play park</p>
+                <p>Meet new and old friends,</p>
+                <p>Have tea and cakes or go for a walk in the local area,</p>
+                <p>Or entertain your young ones with our brand new play park.</p>
         </div>
 
         <div class="img-container">
